src/Grammer.txt
<program> ::= <basic> <id> <(> <)> <block>
<block> ::= <{> <decls> <stmts> <}>
<decls> ::= <decls1>
<decls1> ::= <decl> <decls1>
<decls1> ::= <empty>
<decl> ::= <type> <id> <;>
<type> ::= <basic> <type1>
<type1> ::= <[> <num> <]> <type1>
<type1> ::= <empty>
<stmts> ::= <stmts1>
<stmts1> ::= <stmt> <stmts1>
<stmts1> ::= <empty>
<stmt> ::= <lval> <=> <bool> <;>
<stmt> ::= <if> <(> <bool> <)> <stmt>
<stmt> ::= <if> <(> <bool> <)> <stmt> <else> <stmt>
<stmt> ::= <while> <(> <bool> <)> <stmt>
<stmt> ::= <do> <stmt> <while> <(> <bool> <)> <;>
<stmt> ::= <break> <;>
<stmt> ::= <{> <decls> <stmts> <}>
<lval> ::= <id> <lval1>
<lval1> ::= <[> <bool> <]> <lval1>
<lval1> ::= <empty>
<bool> ::= <join> <bool1>
<bool1> ::= <||> <join> <bool1>
<bool1> ::= <empty>
<join> ::= <equ> <join1>
<join1> ::= <&&> <equ> <join1>
<join1> ::= <empty>
<equ> ::= <rel> <equ1>
<equ1> ::= <==> <rel> <equ1>
<equ1> ::= <!=> <rel> <equ1>
<equ1> ::= <empty>
<rel> ::= <expr> <<> <expr>
<rel> ::= <expr> <<=> <expr>
<rel> ::= <expr> <>> <expr>
<rel> ::= <expr> <>=> <expr>
<rel> ::= <expr>
<expr> ::= <term> <expr1>
<expr1> ::= <+> <term> <expr1>
<expr1> ::= <-> <term> <expr1>
<expr1> ::= <empty>
<term> ::= <unary> <term1>
<term1> ::= <*> <unary> <term1>
<term1> ::= </> <unary> <term1>
<term1> ::= <empty>
<unary> ::= <!> <unary>
<unary> ::= <-> <unary>
<unary> ::= <factor>
<factor> ::= <(> <bool> <)>
<factor> ::= <id> <lval1>
<factor> ::= <num>
<factor> ::= <real>
<factor> ::= <true>
<factor> ::= <false>
